plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.11'
	id 'io.spring.dependency-management' version '1.1.7'
}

ext {
	set('springCloudVersion', "2025.0.1")
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// [CORE & WEB] - 웹 서비스 구축 핵심
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// [SECURITY] - 인증 및 권한 관리
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// [DB - MyBatis & Driver] - 데이터베이스 연동 및 로그
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'

	// [TOOLS] - 개발 편의 도구
	compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// [TEST] - 단위 및 통합 테스트
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
	// [JWT]
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    
    // [JPA]
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    
    // JSONB
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.0'
    
    // 이메일 전송을 위한 라이브러리 추가
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    
    // Redis를 사용하기 위한 핵심 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	
	// Spring Boot Starter AMQP (RabbitMQ 등을 위한 핵심 의존성)
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    
    // WebClient 사용을 위한 WebFlux 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    
    // FeignClient 의존성 추가
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
}

// Spring Cloud 전체 버전 관리 (BOM) 추가 - 매우 중요!
dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
	useJUnitPlatform()
}
